--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "RESTful service",
   "main": "app.js",
   "scripts": {
-    "test": "NODE_ENV=test mocha test/helpers.js test/resources --recursive --exit",
-    "test-cover": "NODE_ENV=test nyc _mocha"
+    "test": "NODE_ENV=test nyc --reporter=html mocha test_helper.js test --recursive --exit --timeout=3000"
   },
   "repository": {
     "type": "git",
@@ -21,20 +20,22 @@
     "argon2": "^0.17.0",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
+    "bunyan": "^1.8.12",
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "express-bunyan-logger": "^1.3.2",
+    "lodash": "^4.17.4",
     "mongoose": "^5.0.0",
+    "mongoose-unique-validator": "^1.0.6",
     "morgan": "^1.9.0",
-    "scrypt": "^6.0.3"
+    "winston": "^3.0.0-rc1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
     "jshint": "^2.9.5",
     "mocha": "^5.0.0",
-    "mongo-clean": "^1.2.2",
-    "node-mocks-http": "^1.6.6",
     "nyc": "^11.4.1"
   }
 }
